--- a/src/App.scss
+++ b/src/App.scss
@@ -38,6 +38,7 @@
 }
 
 .screen {
+	position: relative;
 	display: grid;
 	grid-template-areas: "header" "content" "footer";
 	grid-template-columns: 1fr;
@@ -50,7 +51,13 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+		gap: 1em;
 		padding: 1em 2em;
+
+		@media (max-width: 600px) {
+			flex-wrap: wrap;
+			justify-content: center;
+		}
 	}
 
 	.screen-content {
@@ -65,4 +72,47 @@
 
 * {
 	// outline: 1px solid red;
+}
+
+.main-nav {
+	display: flex;
+	flex-flow: row nowrap;
+	gap: 0.5em;
+}
+
+.side-nav {
+	position: absolute;
+	top: 1em;
+	right: 1em;
+	bottom: 1em;
+	width: clamp(20rem, 14.196rem + 15.476vw, 28.125rem);
+	max-width: 80vw;
+	background: white;
+	border-radius: 16px;
+	padding: 1em 1.5em;
+	transition: all 0.6s cubic-bezier(0.16, 1, 0.3, 1);
+	box-shadow: 0px 10px 35px 0px rgba(0, 0, 0, 0.05);
+
+	&:not(.is-open) {
+		opacity: 0;
+		transform: translateX(0.8em);
+		pointer-events: none;
+	}
+}
+
+.vocab-set-list {
+	text-align: start;
+	list-style: none;
+	font-size: clamp(1rem, 0.732rem + 0.714vw, 1.375rem);
+	padding: 0;
+
+	li {
+		border-bottom: 1px solid #efefef;
+		padding-bottom: 1em;
+		margin-bottom: 1em;
+
+		span {
+			cursor: pointer;
+		}
+	}
 }
